# q-bot

./: .env.prod  .gitignore  pyproject.toml  test.py
config/: nowtime.json
src/plugins/game_free_world/: __init__.py  config.py
src/plugins/game_free_world/common/: txt2img.py
src/plugins/game_free_world/docs/: 修炼境界.md  属性系统.md  战斗系统.md  游戏概念.md
src/plugins/game_free_world/gamedata/json/: README.md  任务.json5  地图.json5  帮助.json5  技能配置.json5  敌人.json5  物品.json5
src/plugins/game_free_world/gamedata/map/: 世界地图.json5  辰南大陆.json5
src/plugins/game_free_world/psql_db/: __init__.py  db_context.py
src/plugins/game_free_world/service/: game_handler.py
src/plugins/game_query/: __init__.py
src/plugins/nonebot_plugin_game_query/: __init__.py  box.py  take_my_money.py  utils.py
src/plugins/nonebot_plugin_love_link/: __init__.py  config.py
src/plugins/nonebot_plugin_love_link/models/: user_model.py
src/plugins/nonebot_plugin_love_link/serivce/: data_source.py
src/plugins/nonebot_plugin_qun/: __init__.py  config.py
src/plugins/nonebot_plugin_qun/welcome_utils/: message_util.py
src/plugins/nonebot_plugin_time/: __init__.py
src/plugins/test/: __init__.py
test_plugins/nonebot_free_world/: Game.py  Player.py  README.md  __init__ copy.py  data.py  txt2img.py  utils.py
test_plugins/nonebot_free_world/resource/: equipments.json  events.json  game_events.json  scene_rewards.json  scenes.json
